--- a/oce/templates/board.html
+++ b/oce/templates/board.html
@@ -66,31 +66,31 @@
     id="arching-block-1"
     shape="poly"
     coords="164,163,160,142,164,118,189,147,196,142,212,142,212,155,208,169,187,175"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Science: Mathematics, Algebra, and Trigonometry"
-    data-maphilight='{"strokeColor":"f3c47b","fillColor":"f9d688"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-4"
     shape="poly"
     coords="165,116,170,92,181,78,204,121,218,123,221,126,211,139,198,139,190,145"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Science: Earth and Space"
-    data-maphilight='{"strokeColor":"eee980","fillColor":"fdfab0"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-7"
     shape="poly"
     coords="183,75,210,54,227,52,217,65,231,104,235,112,224,125,204,121,190,98"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Science: Life and Biology"
-    data-maphilight='{"strokeColor":"b7cc70","fillColor":"e7fbae"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <!-- Second Column -->
   <area
@@ -127,31 +127,31 @@
     id="arching-block-2"
     shape="poly"
     coords="247,234,247,198,266,203,291,203,299,197,299,240,296,248,289,255,268,251"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Arts: Engineering, Tools, and Architecture"
-    data-maphilight='{"strokeColor":"b5349a","fillColor":"b74b9a"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-5"
     shape="poly"
     coords="246,195,246,179,241,157,263,139,283,132,294,144,298,168,299,194,298,201,263,201"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Arts: Language and Literature"
-    data-maphilight='{"strokeColor":"cf2853","fillColor":"e96b72"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-8"
     shape="poly"
     coords="242,154,239,131,239,108,255,94,274,87,292,107,292,133,292,138,281,130,260,139"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Arts: Music, Theater, and Painting"
-    data-maphilight='{"strokeColor":"f1a081","fillColor":"f7c89f"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <!-- Third Column -->
   <area
@@ -188,41 +188,41 @@
     id="arching-block-3"
     shape="poly"
     coords="298,157,298,139,304,144,322,144,328,147,342,134,348,122,353,141,354,164,347,173,333,177,319,171,308,171"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Humanities: Law and Government"
-    data-maphilight='{"strokeColor":"82cbd9","fillColor":"9de8f7"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-6"
     shape="poly"
     coords="295,133,295,126,304,126,311,128,327,101,331,82,343,101,347,116,343,130,329,144,315,141,305,141"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Humanities: Human Behavior"
-    data-maphilight='{"strokeColor":"6781af","fillColor":"7ea1d1"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <area
     id="arching-block-9"
     shape="poly"
     coords="295,123,295,109,298,109,304,87,313,65,323,70,328,77,328,91,320,113,311,126,302,125"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Humanities: Ethics and Philosophy"
-    data-maphilight='{"strokeColor":"ab7fef","fillColor":"caaff4"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
   <!-- Keystone -->
   <area
     id="keystone-block"
     shape="poly"
     coords="234,110,218,66,233,46,252,29,276,29,299,47,310,64,297,105,292,105,274,85,252,94,236,106,236,110"
-    href="#"
+    href="{{ url_for('content.block9') }}"
     alt="Community"
-    data-maphilight='{"strokeColor":"a4a4a4","fillColor":"ffffff"}'
-    data-character-name="Hezekiah"
-    data-character-img-url="{{ url_for('static', filename='images/hezekiah2.png') }}"
+    data-maphilight='{"strokeColor":"b9b49d","fillColor":"c6c8b4"}'
+    data-character-name="Onibilib and Ekatnek Eseennet"
+    data-character-img-url="{{ url_for('static', filename='images/onibilib-ekatnek.png') }}"
   />
 </map>
